Fixes #6593 - allow the scrollbox to have overflow:auto instead of overflow:scroll (to hide scrollbars when not used) !strict
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@14040 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/grid/resources/Grid.css
+++ b/grid/resources/Grid.css
@@ -86,7 +86,7 @@
 
 .dojoxGrid-scrollbox {
 	position: relative;
-	overflow: scroll;
+	overflow: auto;
 	background-color: white;
 	width: 100%;
 }
