--- a/grid/resources/nihiloGrid.css
+++ b/grid/resources/nihiloGrid.css
@@ -90,7 +90,7 @@
 
 .nihilo .dojoxGrid-scrollbox {
 	position: relative;
-	overflow: scroll;
+	overflow: auto;
 	background-color: #fefefe;
 	width: 100%;
 }
