--- a/grid/resources/tundraGrid.css
+++ b/grid/resources/tundraGrid.css
@@ -79,7 +79,7 @@
 
 .tundra .dojoxGrid-scrollbox {
 	position: relative;
-	overflow: scroll;
+	overflow: auto;
 	background-color: #fefefe;
 	width: 100%;
 }
